# dub-siren

./: .gitignore  .gitmodules  BUILD_AND_TEST.md  CHANGELOG.md  CMakeLists.txt  README.md  TESTING_OPTIONS.md
Resources/: background.jfif
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Common.h  DubDelay.cpp  DubDelay.h  DubOscillator.cpp  DubOscillator.h  Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h  SamplePlayer.h  Voice.cpp  Voice.h
Tests/: CMakeLists.txt  test_Envelope.cpp  test_Main.cpp  test_Oscillator.cpp
